<resources>
    <string name="app_name">My Application</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="Ingredients">Ingredients</string>
    <string name="create_new_account">Create New Account</string>
    <string name="exit">exit</string>
    <string name="back">back</string>
    <string name="register">Register</string>
    <string name="mealname">Meal Name</string>
    <string name="calories">Calories in Meal</string>
    <string name="submit">Submit Meal</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="time">time</string>
    <string name="log">Log Meals for the Day</string>
    <string name="IngredientName">Ingredient Name</string>
    <string name="AddIngredient">Add/Remove Ingredient</string>
    <string-array name="gender_options">
        <item>Male</item>
        <item>Female</item>
        <item>Other</item>
    </string-array>
    <string-array name="filter_options">
        <item>None</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
</resources>